Add Clock and Lerp Movement to Sphere.

--- a/.gitignore
+++ b/.gitignore
@@ -8051,3 +8051,12 @@ ProjectSettings/UnityConnectSettings.asset
 ProjectSettings/VersionControlSettings.asset
 ProjectSettings/VFXManager.asset
 ProjectSettings/XRSettings.asset
+Library/Artifacts/09/09f51e86360420e0a0e63b2f325c47f6
+Library/Artifacts/19/196fc7ed40ac1af63222fb35fd2ac8b3
+Library/Artifacts/1d/1df759c90f475fda2db70457b6f2c2e1
+Library/Artifacts/49/49fc701c90c7cf95213e724c8eae6183
+Library/Artifacts/53/53f2f49be47347acb6bc866fdb9faaee
+Library/Artifacts/c4/c4083d9bc5a23994a5bbfdda94e7df02
+Library/Artifacts/d4/d46d98e0d74d477724d143bf09fa1ee7
+Library/Artifacts/e1/e10df07b0fc577410949ac47e2628330
+Temp/__Backupscenes/0.backup
